Fix Entries alignment.

--- a/src/styles/popup.css
+++ b/src/styles/popup.css
@@ -75,7 +75,6 @@ p {
 }
 
 .time-entry {
-    height: 60px;
     cursor: pointer;
     font-size: 14px;
     transition: all 0.2s ease;
@@ -95,7 +94,7 @@ p {
 }
 
 .time-entries-project {
-    font-size: 10px;
+    font-weight: 700;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -218,4 +217,8 @@ p {
     background-color: #007bff;
     color: white;
     border-color: #007bff;
+}
+
+.pointer {
+    cursor: pointer;
 }
